[package]
name = "dioxus-animations"
description = "Animations library for Dioxus."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "./README.md"
homepage = "https://github.com/marc2332/dioxus-animations"
repository = "https://github.com/marc2332/dioxus-animations"
keywords = ["dioxus", "animations"]
categories = ["gui"]

[dependencies]
easer = "0.3.0"
dioxus-core = "0.4"
dioxus-hooks = "0.4"
futures-util = "0.3.28"
instant = { version = "0.1", features = ["wasm-bindgen"] }
uuid = { version = "1.4.1", features = ["v4"] }
tokio = { version = "1.29.1", features = ["time"] }

[dev-dependencies]
dioxus = "0.4"
dioxus-desktop = "0.4"
